# synthetic_data

./: .gitignore  main.py  pyproject.toml  record.py
lib/: bp_model.py  decode_videos.py  expected_type.py  helpers.py  hr_expected_types.py  riskcalculator.py  schema.py  serializers.py  utils.py
models/: aggregate.py  cardiometabolic.py  hypertension.py  lookup.py  util.py  waist_circumference.py
